--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>Hello There,</h1>
+  <p>welcome to My Website</p>
   <app-root></app-root>
 </body>
 </html>
